--- a/Project5/package.json
+++ b/Project5/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "CSE4050Project5",
+  "name": "cse4050project5",
   "version": "1.0.0",
   "private": true,
   "description": "CS4050 Project #5 - SPA",
@@ -7,28 +7,23 @@
   "scripts": {
     "build": "webpack --devtool eval-cheap-module-source-map --output-pathinfo",
     "build:w": "webpack --devtool eval-cheap-module-source-map --output-pathinfo --watch",
-    "lint": "eslint *.jsx components/*/*.jsx || exit 0",
+    "lint": "eslint *.jsx app/views/*/*.jsx || exit 0",
     "start": "node webServer.js"
   },
   "license": "ISC",
   "dependencies": {
-    "@emotion/react": "^11.10.5",
-    "@emotion/styled": "^11.10.5",
-    "@fontsource/roboto": "^4.5.8",
-    "@mui/icons-material": "^5.10.9",
-    "@mui/material": "^5.10.13",
-    "@mui/styled-engine-sc": "^5.10.6",
+    "@emotion/react": "^11.10.4",
+    "@emotion/styled": "^11.10.4",
+    "@mui/material": "^5.10.9",
     "axios": "^0.27.2",
     "express": "^4.18.2",
     "file-loader": "^6.2.0",
-    "node": "^19.0.1",
     "prismjs": "^1.29.0",
     "promise": "^8.2.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router": "^6.4.2",
     "react-router-dom": "^6.4.2",
-    "styled-components": "^5.3.6",
     "url-loader": "^4.1.1"
   },
   "devDependencies": {
